--- a/src/app/map.component.html
+++ b/src/app/map.component.html
@@ -1,4 +1,9 @@
-<!--<ion-content ng-controller="MapCtrl" scroll="false">-->
+<ion-header>
+  <ion-navbar>
+    <ion-title>Bucalemu</ion-title>
+  </ion-navbar>
+</ion-header>
+
 <ion-content>
   <div class="mainmap" id="map"></div>
 </ion-content>
